Revert "Fix spacing for long title on mobile"
This reverts commit f1500bcdfc38cea26f7441f652d50bb1792c17f5.

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -26,14 +26,6 @@ h6 {
     font-weight: 400;
 }
 
-.navbar-brand {
-    float: left;
-    height: 50px;
-    padding: 0px 10px;
-    font-size: 18px;
-    line-height: 20px;
-  }
-
 .intro-header {
     padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
     padding-bottom: 50px;
